test/libyul/yulSyntaxTests/number_literal_6.yul
{ let x:u256 := 0b11111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111:u256 }
// ----
// TypeError 6709: (16-280): Number literal too large (> 256 bits)
